--- a/Hobbies.html
+++ b/Hobbies.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="Soccer.JPG" height=“200”>
+    <img src="Soccer.JPG" height="200">
     <p>I love playing soccer, going to the gym, and reading.</p>
 </body>
 
